[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/update_info.gd" type="Script" id=1]
[ext_resource path="res://scenes/others/player_icon.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/default_font.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 57
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 52
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.58917
margin_top = 0.529724
margin_right = -1.58917
margin_bottom = 0.529724
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgColor" type="ColorRect" parent="."]
margin_left = -9.70039
margin_top = -6.14088
margin_right = 1033.3
margin_bottom = 609.859
color = Color( 1, 0.858824, 0.854902, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect5" type="ColorRect" parent="."]
margin_left = -81.0
margin_top = 182.0
margin_right = 1089.0
margin_bottom = 448.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -81.4008
margin_top = 188.04
margin_right = 1088.6
margin_bottom = 442.04
color = Color( 1, 0.843137, 0.572549, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 189.0
margin_top = 85.0
margin_right = 879.0
margin_bottom = 157.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 189.26
margin_top = 88.9603
margin_right = 875.26
margin_bottom = 152.96
color = Color( 1, 0.843137, 0.572549, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 253.26
margin_top = 22.7004
margin_right = 770.26
margin_bottom = 66.7004
color = Color( 1, 0.843137, 0.572549, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect6" type="ColorRect" parent="."]
margin_left = 755.0
margin_top = 527.0
margin_right = 984.0
margin_bottom = 577.0
color = Color( 1, 0.843137, 0.572549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconBox" type="GridContainer" parent="."]
margin_left = 244.249
margin_top = 209.821
margin_right = 760.249
margin_bottom = 413.821
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon1" parent="IconBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 100.0

[node name="Icon2" parent="IconBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0

[node name="Icon3" parent="IconBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0

[node name="Icon4" parent="IconBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 312.0
margin_right = 412.0
margin_bottom = 100.0

[node name="Icon5" parent="IconBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 416.0
margin_right = 516.0
margin_bottom = 100.0

[node name="Icon6" parent="IconBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 100.0
margin_bottom = 204.0

[node name="Icon7" parent="IconBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 104.0
margin_right = 204.0
margin_bottom = 204.0

[node name="Icon8" parent="IconBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 208.0
margin_top = 104.0
margin_right = 308.0
margin_bottom = 204.0

[node name="Icon9" parent="IconBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 312.0
margin_top = 104.0
margin_right = 412.0
margin_bottom = 204.0

[node name="Icon10" parent="IconBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 416.0
margin_top = 104.0
margin_right = 516.0
margin_bottom = 204.0

[node name="TextEdit" type="TextEdit" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 250.0
margin_top = 86.0
margin_right = 874.0
margin_bottom = 154.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Test"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ChoosenIcon" parent="." instance=ExtResource( 2 )]
anchor_left = 0.137634
anchor_top = 0.114746
anchor_right = 0.235291
anchor_bottom = 0.281413

[node name="labAccept" type="Label" parent="."]
anchor_left = 0.722039
anchor_top = 0.846259
anchor_right = 0.98571
anchor_bottom = 0.976259
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Accept >"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="labBack" type="Label" parent="."]
visible = false
anchor_left = 0.0297658
anchor_top = 0.830866
anchor_right = 0.219219
anchor_bottom = 0.957533
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.803922, 0.482353, 0.192157, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "< Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="labInfo" type="Label" parent="."]
anchor_left = 0.00292969
anchor_top = 0.00666667
anchor_right = 0.995117
anchor_bottom = 0.126667
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Choose your identity:"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="labInfoBottom" type="Label" parent="."]
anchor_left = 0.00123042
anchor_top = 0.74
anchor_right = 0.993418
anchor_bottom = 0.821667
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="gui_input" from="labAccept" to="." method="_on_accept"]
[connection signal="gui_input" from="labBack" to="." method="_on_back"]
